packages/rust/crates/xiuxian-wendao/tests/snapshots/gateway/studio/vfs_get_entry_payload.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "contentType": "text/markdown",
  "isDir": false,
  "name": "guide.md",
  "path": "docs/guide.md",
  "projectDirs": [
    "docs",
    "skills"
  ],
  "projectName": "kernel",
  "projectRoot": ".",
  "rootLabel": "docs",
  "size": 16
}
