packages/rust/crates/xiuxian-wendao/tests/snapshots/gateway/studio/vfs_read_content_payload.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/../../../tests/unit/gateway/studio/support.rs
expression: value
---
{
  "content": "---\nname: Writer\n---\n",
  "contentType": "text/markdown",
  "path": "skills/writer/SKILL.md"
}
