packages/rust/crates/xiuxian-wendao/tests/snapshots/gateway/studio/vfs_root_entries_payload.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "entries": [
    {
      "contentType": null,
      "isDir": true,
      "name": "docs",
      "path": "docs",
      "projectName": "kernel",
      "rootLabel": "docs",
      "size": 0
    },
    {
      "contentType": null,
      "isDir": true,
      "name": "skills",
      "path": "skills",
      "projectName": "kernel",
      "rootLabel": "skills",
      "size": 0
    }
  ]
}
